fix wrap

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,8 +79,9 @@ code {
 }
 
 pre {
-  font-size: 0.9rem;
   overflow-x: auto;
+  overflow-wrap: normal;
+  font-size: 0.9rem;
   max-width: 100%;
   padding: 0.6rem 0.5rem;
   border: 0.1rem solid #535023ed;
